--- a/Frontend/expo/UserManagementApp/package.json
+++ b/Frontend/expo/UserManagementApp/package.json
@@ -19,11 +19,11 @@
     "@react-navigation/native-stack": "^7.9.0",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.21",
+    "expo-router": "~6.0.22",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
